--- a/index.html
+++ b/index.html
@@ -1,119 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header >
-        <div class="container ">
-            <div class="header">
-        <div class="logo">
-            <img src="./img/Standard Collection 13.svg" alt="">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="header">
+          <div class="logo">
+            <img src="./img/Standard Collection 13.svg" alt="" />
             <h6>Zone.</h6>
-        </div>
-        <div class="links">
+          </div>
+          <div class="links">
             <a href="#">Home</a>
             <a href="#">About us</a>
             <a href="#">Service</a>
             <a href="#">Pricing</a>
             <a href="#">Blog</a>
             <button>Contact Us</button>
+          </div>
         </div>
-        </div>
-        </div>
-
+      </div>
     </header>
     <div class="banner">
-        <div class="container ">
-            <div class="banners">
-        <div class="banner-left">
+      <div class="container">
+        <div class="banners">
+          <div class="banner-left">
             <h2>Virtual Reality Business Solutions</h2>
-            <p>We have over 15 year exprience in business consultting arena. We have over 15 year exprience in business consultting arena and artficial intelligence.</p>
+            <p>
+              We have over 15 year exprience in business consultting arena. We
+              have over 15 year exprience in business consultting arena and
+              artficial intelligence.
+            </p>
             <div>
-            <button>Join Us</button>
-            <img src="./img/Watch video.svg" alt="">
+              <button>Join Us</button>
+              <img src="./img/Watch video.svg" alt="" />
             </div>
-
+          </div>
+          <div class="banner-right">
+            <img src="./img/Saly-19.png" alt="" />
+          </div>
         </div>
-        <div class="banner-right">
-            <img src="./img/Saly-19.png" alt="">
-            </div>
-        </div>
-    </div>
+      </div>
     </div>
     <div class="section1">
-        <div class="container">
-            <div class="banner1">
-                <h2>Our Service </h2>
-                <p>We turn information into actionable insights We work to understand your issues
- and are driven to ask better questions in the pursuit of making work.</p>
-                    <div class="card">
-                        <div class="cards">
-                            <div style="background: #695bb8;" class="card-img">
-                            <img  src="./img/checklist 2.png" alt="">
-                            </div>
-                            <h3>Order Management</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
-                            <p>Learn more➡</p>
-                        </div>
-                        <div class="cards">
-                            <div style="background: #c86d65;" class="card-img">
-                            <img  src="./img/2 1.svg" alt="">
-                            </div>
-                            <h3>Social Assistant</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
-                            <p>Learn more➡</p>
-                        </div><div class="cards">
-                            <div style="background: dodgerblue;" class="card-img">
-                            <img  src="./img/bitcoin 1.svg" alt="">
-                            </div>
-                            <h3>Crypto Platform</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
-                            <p>Learn more➡</p>
-                        </div><div class="cards">
-                            <div style="background: greenyellow;" class="card-img">
-                            <img  src="./img/checklist 2.png" alt="">
-                            </div>
-                            <h3>Smart Trading Modules</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
-                            <p>Learn more➡</p>
-                        </div>
-                        <div class="cards">
-                            <div style="background: purple;" class="card-img">
-                            <img  src="./img/3 1.svg" alt="">
-                            </div>
-                            <h3>Analyzer of the News</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
-                            <p>Learn more➡</p>
-                        </div>
-                        <div class="cards">
-                            <div style="background: dodgerblue;" class="card-img">
-                            <img  src="./img/5 1.svg" alt="">
-                            </div>
-                            <h3>Smart Trading Modules</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
-                            <p>Learn more➡</p>
-                        </div>
-                    </div>
+      <div class="container">
+        <div class="banner1">
+          <h2>Our Service</h2>
+          <p>
+            We turn information into actionable insights We work to understand
+            your issues and are driven to ask better questions in the pursuit of
+            making work.
+          </p>
+          <div class="card">
+            <div class="cards">
+              <div style="background: #695bb8" class="card-img">
+                <img src="./img/checklist 2.png" alt="" />
+              </div>
+              <h3>Order Management</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed
+                quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.
+              </p>
+              <p>Learn more➡</p>
             </div>
+            <div class="cards">
+              <div style="background: #c86d65" class="card-img">
+                <img src="./img/2 1.svg" alt="" />
+              </div>
+              <h3>Social Assistant</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed
+                quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.
+              </p>
+              <p>Learn more➡</p>
+            </div>
+            <div class="cards">
+              <div style="background: dodgerblue" class="card-img">
+                <img src="./img/bitcoin 1.svg" alt="" />
+              </div>
+              <h3>Crypto Platform</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed
+                quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.
+              </p>
+              <p>Learn more➡</p>
+            </div>
+            <div class="cards">
+              <div style="background: greenyellow" class="card-img">
+                <img src="./img/checklist 2.png" alt="" />
+              </div>
+              <h3>Smart Trading Modules</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed
+                quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.
+              </p>
+              <p>Learn more➡</p>
+            </div>
+            <div class="cards">
+              <div style="background: purple" class="card-img">
+                <img src="./img/3 1.svg" alt="" />
+              </div>
+              <h3>Analyzer of the News</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed
+                quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.
+              </p>
+              <p>Learn more➡</p>
+            </div>
+            <div class="cards">
+              <div style="background: dodgerblue" class="card-img">
+                <img src="./img/5 1.svg" alt="" />
+              </div>
+              <h3>Smart Trading Modules</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed
+                quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.
+              </p>
+              <p>Learn more➡</p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <div class="section2">
-        <div class="container">
-            <div class="banners">
-                <div class="banner-right">
-                    <img src="./img/man-working-using-virtual-reality-4019408-3337377@0 1.png" alt="">
-                </div>
-                <div class="banner-left">
-                    <h3>We complete every projects extra care as customer need</h3>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error. Tempora odit laborum iure inventore possimus laboriosam qui nam.</small>
-                </div>
-
-            </div>
+      <div class="container">
+        <div class="banners">
+          <div class="banner-right">
+            <img
+              src="./img/man-working-using-virtual-reality-4019408-3337377@0 1.png"
+              alt=""
+            />
+          </div>
+          <div class="banner-left">
+            <h3>We complete every projects extra care as customer need</h3>
+            <small
+              >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at
+              dictum risus, non suscipit arcu. Quisque aliquam posuere tortor,
+              sit amet convallis nuncoe scelerisque in. orem ipsum dolor sit
+              amet, consectetur adipisicing elit. Labore eius molestiae facere,
+              natus reprehenderit eaque eum, autem ipsam. Magfini, error.
+              Tempora odit laborum iure inventore possimus laboriosam qui
+              nam.</small
+            >
+          </div>
         </div>
+      </div>
     </div>
-</body>
+    <div class="section3">
+      <div class="container">
+        <div class="banners">
+          <div class="banner-left">
+            <h2>We complete every project extra care as customer need</h2>
+            <p>
+              We have over 15 year exprience in business consultting arena. We
+              have over 15 year exprience in business consultting arena and
+              artficial intelligence.
+            </p>
+            <div>
+              <button>Join Us</button>
+              <img src="./img/Watch video.svg" alt="" />
+            </div>
+          </div>
+          <div class="banner-right">
+            <img src="./img/man3.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card2">
+      <div class="container">
+        <div class="section4">
+          <div>
+            <h2>Met Our Team</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis
+              accumsan nisi Ut ut felis congue nisl hendrerit commodo.
+            </p>
+          </div>
+          <div class="card-class">
+            <div class="cards2">
+              <img src="./img/card1.png" alt="" />
+              <p>Sunny Khan</p>
+              <small>Executive officer</small><br>
+              <img src="./img/Icon (2).png" alt="" />
+            </div>
+            <div class="cards2">
+              <img src="./img/card2.png" alt="" />
+              <p>Alina Jesia</p>
+              <small>UX/UI DESIGNER</small><br>
+              <img src="./img/Icon (2).png" alt="" />
+            </div>
+            <div class="cards2">
+              <img src="./img/card3.png" alt="" />
+              <p>Alex Sohag</p>
+              <small>BUSINESS DEVELOPMENT</small><br>
+              <img src="./img/Icon (2).png" alt="" />
+            </div>
+            <div class="cards2">
+              <img src="./img/card4.png" alt="" />
+              <p>Afroza Mou</p>
+              <small>Head of marketing</small><br>
+              <img src="./img/Icon (2).png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="footer1">
+            <div class="logo">
+              <img src="./img/Standard Collection 13.svg" alt="" />
+              <h6>Zone.</h6>
+            </div>
+            <a href="#">📍 Dhaka, Bangladesh</a>
+            <a href="#"><span>&#x1F4DE;</span>0943833399</a>
+            <a href="#"><span>&#x1F4E7;</span> support@zone.com</a>
+            <img src="./img/Icon (2).png" alt="">
+          </div>
+          <div class="footer2">
+            <a href="#">Service</a>
+            <a href="#">Order Management</a>
+            <a href="#">Social Assistant</a>
+            <a href="#">Crypto Platform</a>
+            <a href="#">Analyzer of the News</a>
+          </div>
+          <div class="footer2">
+            <a href="#">Company</a>
+            <a href="#">Order Management</a>
+            <a href="#">Social Assistant</a>
+            <a href="#">Crypto Platform</a>
+            <a href="#">Analyzer of the News</a>
+          </div>
+          <div class="footer2">
+            <a href="#">Supports</a>
+            <a href="#">Help centert</a>
+            <a href="#">Feedbcak</a>
+            <a href="#">Contact us</a>
+            <a href="#">Terms conditins</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
